--- a/launcher/pom.xml
+++ b/launcher/pom.xml
@@ -9,8 +9,31 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>launcher</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>iinditex-launcher</artifactId>
+    <packaging>jar</packaging>
     <name>INDITEX - launcher</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>dev.jgranizo</groupId>
+            <artifactId>inditex-model</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
