--- a/launcher/conf/application.yaml
+++ b/launcher/conf/application.yaml
@@ -1,16 +1,29 @@
 spring:
   datasource:
     url: jdbc:h2:mem:inditex
-    username: sa
-    password: password
+    username: inditexAdmin
+    password: inditexPwd
     driver-class-name: org.h2.Driver
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
   h2:
     console:
       enabled: true
+  mvc:
+    throw-exception-if-no-handler-found: true
+  web:
+    resources:
+      add-mappings: false
+  jackson:
+    serialization:
+      write-dates-as-timestamps: false
+    default-property-inclusion: non_null
+  main:
+    allow-bean-definition-overriding: true
 server:
   port: 8080
   ssl:
     enabled: false
-
+logging:
+  level:
+    root: INFO
