--- a/model/pom.xml
+++ b/model/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>dev.jgranizo</groupId>
+        <groupId>dev.jgranizo.inditex</groupId>
         <artifactId>inditex</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
@@ -27,6 +27,10 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>
     </dependencies>
 
